toolkit/components/url-classifier/Classifier.cpp
@@ -753,7 +753,7 @@ nsresult Classifier::AsyncApplyUpdates(const TableUpdateArray& aUpdates,
   RefPtr<Classifier> self = this;
   nsCOMPtr<nsIRunnable> bgRunnable = NS_NewRunnableFunction(
       "safebrowsing::Classifier::AsyncApplyUpdates",
-      [self, aUpdates, aCallback, callerThread] {
+      [self, aUpdates, aCallback, callerThread] () mutable {
         MOZ_ASSERT(self->OnUpdateThread(), "MUST be on update thread");
 
         nsresult bgRv;
@@ -773,19 +773,27 @@ nsresult Classifier::AsyncApplyUpdates(const TableUpdateArray& aUpdates,
           bgRv = NS_ERROR_OUT_OF_MEMORY;
         }
 
+        // Classifier is created in the worker thread and it has to be released
+        // in the worker thread(because of the constrain that LazyIdelThread has
+        // to be created and released in the same thread). We transfer the ownership
+        // to the caller thread here to gurantee that we don't release it in
+        // the udpate thread.
         nsCOMPtr<nsIRunnable> fgRunnable = NS_NewRunnableFunction(
             "safebrowsing::Classifier::AsyncApplyUpdates",
-            [self, aCallback, bgRv, failedTableNames, callerThread] {
+            [self = std::move(self), aCallback, bgRv, failedTableNames, callerThread] () mutable {
+              RefPtr<Classifier> classifier = std::move(self);
+
               MOZ_ASSERT(NS_GetCurrentThread() == callerThread,
                          "MUST be on caller thread");
 
               LOG(("Step 2. ApplyUpdatesForeground on caller thread"));
               nsresult rv =
-                  self->ApplyUpdatesForeground(bgRv, failedTableNames);
+                  classifier->ApplyUpdatesForeground(bgRv, failedTableNames);
 
               LOG(("Step 3. Updates applied! Fire callback."));
               aCallback(rv);
             });
+
         callerThread->Dispatch(fgRunnable, NS_DISPATCH_NORMAL);
       });
 
